--- a/style.css
+++ b/style.css
@@ -48,8 +48,8 @@ a:hover{
   min-height: 400px;
 }
 
-.w3-wide {letter-spacing: 10px;}
-.w3-hover-opacity {cursor: pointer;}
+.ef-wide {letter-spacing: 10px;}
+.ef-hover-opacity {cursor: pointer;}
 
 /* Turn off parallax scrolling for tablets and phones */
 @media only screen and (max-device-width: 1600px) {
